--- a/src/CombatAnalysis.App/Views/DamageTakenDetailsView.xaml
+++ b/src/CombatAnalysis.App/Views/DamageTakenDetailsView.xaml
@@ -54,7 +54,7 @@
                 <TextBlock Text="Тип" FontSize="15" TextAlignment="Center" Padding="10" FontWeight="SemiBold"
                            VerticalAlignment="Center" Margin="0" Width="100" Foreground="Gray"/>
                 <ComboBox Style="{DynamicResource ComboBoxStyle1}" VerticalAlignment="Center" Name="detailsType"
-                          Width="125" SelectedIndex="0">
+                          Width="135" SelectedIndex="0">
                     <ComboBoxItem Content="Общий" IsSelected="True"/>
                     <ComboBoxItem Content="Подробнее" />
                 </ComboBox>
@@ -78,15 +78,13 @@
             </StackPanel>
         </StackPanel>
 
-        <Grid Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="1" VerticalAlignment="Bottom" Margin="0 -20">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="70 0">
-                <CheckBox HorizontalAlignment="Center" VerticalAlignment="Center"
+        <StackPanel Grid.Column="2" Grid.Row="1" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0 -20">
+            <CheckBox Margin="50 0" HorizontalAlignment="Center" VerticalAlignment="Center"
                    Content="Обратный порядок" FontSize="16" VerticalContentAlignment="Center" 
-                          FontWeight="SemiBold" IsChecked="{Binding IsCollectionReversed}"/>
-            </StackPanel>
-        </Grid>
-        
-        <ListBox Margin="20 30" Grid.Row="2" Grid.Column="2" 
+                   FontWeight="SemiBold" IsChecked="{Binding IsCollectionReversed}"/>
+        </StackPanel>
+
+        <ListBox Margin="20 30 20 45" Grid.Row="2" Grid.Column="2" 
                  Background="Transparent" ItemsSource="{Binding DamageTakenGeneralInformations}"
                  Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:0}">
             <ListBox.ItemTemplate>
@@ -104,7 +102,7 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <ListBox Margin="20 30" Background="Transparent" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2"
+        <ListBox Margin="20 30 20 45" Background="Transparent" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2"
                  ItemsSource="{Binding DamageTakenInformations}"
                  Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
             <ListBox.ItemTemplate>
@@ -124,6 +122,14 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
+        <StackPanel Grid.Column="2" Grid.Row="2" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="20 10"
+                    Orientation="Horizontal">
+            <TextBlock Margin="50 0" HorizontalAlignment="Center" VerticalAlignment="Center"
+                   Text="Всего:" FontSize="16" TextAlignment="Center"/>
+            <TextBlock Margin="50 0" HorizontalAlignment="Center" VerticalAlignment="Center"
+                   Text="{Binding TotalValue}" FontSize="18" TextAlignment="Center" FontWeight="Bold"/>
+        </StackPanel>
+        
         <StackPanel Margin="25 10" Grid.Row="3" Grid.Column="3" Orientation="Horizontal"
                     Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
             <StackPanel Margin="20" MinWidth="400">
