--- a/src/CombatAnalysis.App/Views/MainInformationView.xaml
+++ b/src/CombatAnalysis.App/Views/MainInformationView.xaml
@@ -20,6 +20,12 @@
             <converters:TheNativeBoolToVisibilityConverter x:Key="BoolToVisibility" />
         </Grid.Resources>
 
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="55"/>
+            <ColumnDefinition Width="220"/>
+            <ColumnDefinition Width="0.7*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="0.25*"/>
             <RowDefinition Height="*"/>
@@ -27,41 +33,18 @@
             <RowDefinition Height="0.05*"/>
         </Grid.RowDefinitions>
 
-        <ContentControl Grid.RowSpan="4" Content="{Binding BasicTemplate}">
+        <ContentControl Grid.RowSpan="4" Grid.ColumnSpan="4" Content="{Binding BasicTemplate}">
             <ContentControl.Resources>
                 <DataTemplate DataType="{x:Type viewModels:BasicTemplateViewModel}">
                     <local:BasicTemplateView />
                 </DataTemplate>
             </ContentControl.Resources>
         </ContentControl>
-        <!--<Border Grid.Column="2" Grid.Row="1">
-            <Grid>
-                <StackPanel Orientation="Horizontal" Margin="30 0 0 30">
-                    <Rectangle Width="0.8" Stroke="#dadada" VerticalAlignment="Stretch"/>
-                </StackPanel>
-                <StackPanel Margin="30 0 15 0">
-                    <TextBlock Text="Groups" Margin="25 0 0 5" Style="{StaticResource titleText}"/>
-                    
-                    <uc:Item Title="Test 1" Message="Okay" Color="#73afff" TagName="OF" MessageCount="2"/>
-                    <uc:Item Title="Test 2" Message="Yes" Color="#73afff" TagName="OF" MessageCount="3" Visibility="Collapsed"/>
-                    <uc:Item Title="Test 3" Message="Good" Color="#73afff" TagName="OF" MessageCount="1"/>
-                    <uc:Item Title="Test 4" Message="Let's go" Color="#73afff" TagName="OF" MessageCount="4"/>
-
-                    <Button Content="Show all" Style="{StaticResource showButton}"/>
-                    
-                    <TextBlock Text="Persons" Margin="25 15 0 5" Style="{StaticResource titleText}"/>
-                    
-                    <uc:Item Title="Test 4" Message="Let's go" Color="#73afff" TagName="OF" MessageCount="4"/>
-
-                    <Button Content="Show all" Style="{StaticResource showButton}"/>
-                </StackPanel>
-            </Grid>
-        </Border>-->
-
-        <TextBlock Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"
+        
+        <TextBlock Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center"
                    Text="Получение информации о бое" FontSize="16" Margin="0 30" Style="{StaticResource titleText}"/>
-        <StackPanel IsEnabled="{Binding IsParsing, Converter={StaticResource BoolToXAMLBool}}" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3"
-                    HorizontalAlignment="Center" VerticalAlignment="Center" Width="375" Margin="20">
+        <StackPanel IsEnabled="{Binding IsParsing, Converter={StaticResource BoolToXAMLBool}}" Grid.Row="1" Grid.Column="3"
+                    HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="375" Margin="20">
             <TextBlock HorizontalAlignment="Center" Text="Загрузить файл с данными о бое" Margin="0 20" FontSize="16" />
             <Button mvx:Bi.nd="Command GetCombatLogCommand" Content="Загрузить" Width="100" FontSize="16"
                     Margin="15 0" Style="{StaticResource showButton}" />
@@ -70,8 +53,24 @@
                 <TextBlock Text="{Binding CombatLog, Mode=TwoWay}" FontWeight="Bold" Margin="20 0" FontSize="14" />
             </StackPanel>
         </StackPanel>
-        <StackPanel IsEnabled="{Binding IsParsing, Converter={StaticResource BoolToXAMLBool}}" Grid.Row="2"
-                    VerticalAlignment="Center" HorizontalAlignment="Center">
+        <StackPanel IsEnabled="{Binding IsParsing, Converter={StaticResource BoolToXAMLBool}}" Grid.Row="1" Grid.Column="2"
+                    HorizontalAlignment="Center" VerticalAlignment="Center" Margin="20">
+            <TextBlock HorizontalAlignment="Center" Text="Логи" Margin="0" FontSize="16" />
+            <Button mvx:Bi.nd="Command LoadCombatsCommand" Content="Загрузить" Width="100" FontSize="16"
+                    Margin="10" Style="{StaticResource showButton}" Foreground="Blue" />
+            <ListBox Background="Transparent" ItemsSource="{Binding CombatLogs}" SelectedIndex="{Binding SelectedCombatLogId}">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Center">
+                            <TextBlock FontSize="14" Text="{Binding Path=Name}" Margin="15" />
+                            <TextBlock FontSize="14" Text="{Binding Path=Date}" Margin="15" />
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+        </StackPanel>
+        <StackPanel IsEnabled="{Binding IsParsing, Converter={StaticResource BoolToXAMLBool}}" Grid.Row="2" Grid.Column="2"
+                    Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center">
             <StackPanel IsEnabled="{Binding CombatLog, Converter={StaticResource ToXAMLBool}}" Margin="20">
                 <Button Height="35" Content="Анализ" Width="100" FontSize="16" Margin="0 20"
                     mvx:Bi.nd="Command OpenPlayerAnalysisCommand" Style="{StaticResource showButton}" />
