--- a/src/CombatAnalysis.App/Views/MainInformationView.xaml
+++ b/src/CombatAnalysis.App/Views/MainInformationView.xaml
@@ -45,7 +45,7 @@
         <TextBlock Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center"
                    Text="Получение информации о бое" FontSize="16" Margin="0 30" Style="{StaticResource titleText}"/>
         <StackPanel IsEnabled="{Binding IsParsing, Converter={StaticResource BoolToXAMLBool}}" Grid.Row="1" Grid.Column="3"
-                    HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="375" Margin="20">
+                    HorizontalAlignment="Center" VerticalAlignment="Top" MinWidth="375" Margin="0 75">
             <TextBlock HorizontalAlignment="Center" Text="Загрузить файл с данными о бое" Margin="0 20" FontSize="16" />
             <Button mvx:Bi.nd="Command GetCombatLogCommand" Content="Загрузить" Width="100" FontSize="16"
                     Margin="15 0" Style="{StaticResource showButton}" />
@@ -54,23 +54,38 @@
                 <TextBlock Text="{Binding CombatLog, Mode=TwoWay}" FontWeight="Bold" Margin="20 0" FontSize="14" />
             </StackPanel>
         </StackPanel>
-        <StackPanel IsEnabled="{Binding IsParsing, Converter={StaticResource BoolToXAMLBool}}" Grid.Row="1" Grid.Column="2"
-                    HorizontalAlignment="Center" VerticalAlignment="Center" Margin="20"
-                    Visibility="{Binding CombatLogsNumber, Converter={StaticResource IntToVisibility}, ConverterParameter='0:true:>'}">
-            <TextBlock HorizontalAlignment="Center" Text="Логи" Margin="0" FontSize="16" />
-            <Button mvx:Bi.nd="Command LoadCombatsCommand" Content="Загрузить" Width="100" FontSize="16"
-                    Margin="10" Style="{StaticResource showButton}" Foreground="Blue"/>
-            <ListBox Background="Transparent" ItemsSource="{Binding CombatLogs}" SelectedIndex="{Binding SelectedCombatLogId}">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Center">
-                            <TextBlock FontSize="14" Text="{Binding Path=Name}" Margin="15" />
-                            <TextBlock FontSize="14" Text="{Binding Path=Date}" Margin="15" />
-                        </StackPanel>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
-        </StackPanel>
+        <ScrollViewer Grid.Row="1" Grid.Column="2" MaxHeight="300" Margin="20 0"
+                      Visibility="{Binding CombatLogsNumber, Converter={StaticResource IntToVisibility}, ConverterParameter='0:true:>'}">
+            <StackPanel IsEnabled="{Binding IsParsing, Converter={StaticResource BoolToXAMLBool}}" 
+                    HorizontalAlignment="Center" VerticalAlignment="Top" Margin="20">
+                <TextBlock HorizontalAlignment="Center" Text="Ранее добавленные Логи" Margin="0" FontSize="16" />
+                <Grid>
+                    <Button mvx:Bi.nd="Command LoadCombatsCommand" Content="Загрузить" Width="100" FontSize="16"
+                            Margin="0 10" Style="{StaticResource showButton}" Foreground="Blue"/>
+                    <Icon:PackIconMaterial Kind="Delete" Foreground="Orange" Style="{StaticResource menuButtonIcon}"
+                                           HorizontalAlignment="Right" mvx:Bi.nd="Command DeleteCombatCommand">
+                        <Icon:PackIconMaterial.ToolTip>
+                            <ToolTip>
+                                Удалить выбранный Лог без возможности восстановить.
+                            </ToolTip>
+                        </Icon:PackIconMaterial.ToolTip>
+                        <Icon:PackIconMaterial.InputBindings>
+                            <MouseBinding Command="{Binding DeleteCombatCommand}" Gesture="LeftClick"/>
+                        </Icon:PackIconMaterial.InputBindings>
+                    </Icon:PackIconMaterial>
+                </Grid>
+                <ListBox Background="Transparent" ItemsSource="{Binding CombatLogs}" SelectedIndex="{Binding SelectedCombatLogId}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Center">
+                                <TextBlock FontSize="14" Text="{Binding Path=Name}" Margin="15" />
+                                <TextBlock FontSize="14" Text="{Binding Path=Date}" Margin="15" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </StackPanel>
+        </ScrollViewer>
         <StackPanel IsEnabled="{Binding IsParsing, Converter={StaticResource BoolToXAMLBool}}" Grid.Row="2" Grid.Column="2"
                     Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center">
             <StackPanel IsEnabled="{Binding CombatLog, Converter={StaticResource ToXAMLBool}}" Margin="20">
