--- a/src/CombatAnalysis.App/Views/MainInformationView.xaml
+++ b/src/CombatAnalysis.App/Views/MainInformationView.xaml
@@ -54,38 +54,43 @@
                 <TextBlock Text="{Binding CombatLog, Mode=TwoWay}" FontWeight="Bold" Margin="20 0" FontSize="14" />
             </StackPanel>
         </StackPanel>
-        <ScrollViewer Grid.Row="1" Grid.Column="2" MaxHeight="300" Margin="20 0"
-                      Visibility="{Binding CombatLogsNumber, Converter={StaticResource IntToVisibility}, ConverterParameter='0:true:>'}">
-            <StackPanel IsEnabled="{Binding IsParsing, Converter={StaticResource BoolToXAMLBool}}" 
+        <StackPanel Grid.Row="1" Grid.Column="2" Margin="20 90">
+            <ScrollViewer MaxHeight="300" Visibility="{Binding CombatLogsNumber, Converter={StaticResource IntToVisibility}, ConverterParameter='0:true:>'}">
+                <StackPanel IsEnabled="{Binding IsParsing, Converter={StaticResource BoolToXAMLBool}}" 
                     HorizontalAlignment="Center" VerticalAlignment="Top" Margin="20">
-                <TextBlock HorizontalAlignment="Center" Text="Ранее добавленные Логи" Margin="0" FontSize="16" />
-                <Grid>
-                    <Button mvx:Bi.nd="Command LoadCombatsCommand" Content="Загрузить" Width="100" FontSize="16"
+                    <TextBlock HorizontalAlignment="Center" Text="Ранее добавленные Логи" Margin="0" FontSize="16" />
+                    <Grid>
+                        <Button mvx:Bi.nd="Command LoadCombatsCommand" Content="Загрузить" Width="100" FontSize="16"
                             Margin="0 10" Style="{StaticResource showButton}" Foreground="Blue"/>
-                    <Icon:PackIconMaterial Kind="Delete" Foreground="Orange" Style="{StaticResource menuButtonIcon}"
+                        <Icon:PackIconMaterial Kind="Delete" Foreground="Orange" Style="{StaticResource menuButtonIcon}"
                                            HorizontalAlignment="Right" mvx:Bi.nd="Command DeleteCombatCommand">
-                        <Icon:PackIconMaterial.ToolTip>
-                            <ToolTip>
-                                Удалить выбранный Лог без возможности восстановить.
-                            </ToolTip>
-                        </Icon:PackIconMaterial.ToolTip>
-                        <Icon:PackIconMaterial.InputBindings>
-                            <MouseBinding Command="{Binding DeleteCombatCommand}" Gesture="LeftClick"/>
-                        </Icon:PackIconMaterial.InputBindings>
-                    </Icon:PackIconMaterial>
-                </Grid>
-                <ListBox Background="Transparent" ItemsSource="{Binding CombatLogs}" SelectedIndex="{Binding SelectedCombatLogId}">
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Center">
-                                <TextBlock FontSize="14" Text="{Binding Path=Name}" Margin="15" />
-                                <TextBlock FontSize="14" Text="{Binding Path=Date}" Margin="15" />
-                            </StackPanel>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                </ListBox>
+                            <Icon:PackIconMaterial.ToolTip>
+                                <ToolTip>
+                                    Удалить выбранный Лог без возможности восстановить.
+                                </ToolTip>
+                            </Icon:PackIconMaterial.ToolTip>
+                            <Icon:PackIconMaterial.InputBindings>
+                                <MouseBinding Command="{Binding DeleteCombatCommand}" Gesture="LeftClick"/>
+                            </Icon:PackIconMaterial.InputBindings>
+                        </Icon:PackIconMaterial>
+                    </Grid>
+                    <ListBox Background="Transparent" ItemsSource="{Binding CombatLogs}" SelectedIndex="{Binding SelectedCombatLogId}">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Center">
+                                    <TextBlock FontSize="14" Text="{Binding Path=Name}" Margin="15" />
+                                    <TextBlock FontSize="14" Text="{Binding Path=Date}" Margin="15" />
+                                </StackPanel>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                </StackPanel>
+            </ScrollViewer>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="Удаление" FontSize="18"/>
+                <TextBlock Text="{Binding DeletedRows}" FontSize="16" Margin="25 0"/>
             </StackPanel>
-        </ScrollViewer>
+        </StackPanel>
         <StackPanel IsEnabled="{Binding IsParsing, Converter={StaticResource BoolToXAMLBool}}" Grid.Row="2" Grid.Column="2"
                     Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center">
             <StackPanel IsEnabled="{Binding CombatLog, Converter={StaticResource ToXAMLBool}}" Margin="20">
