--- a/src/CombatAnalysis.App/Views/MainInformationView.xaml
+++ b/src/CombatAnalysis.App/Views/MainInformationView.xaml
@@ -104,7 +104,7 @@
                     </Icon:PackIconMaterial>
                 </StackPanel>
             </StackPanel>
-            <TextBlock Width="175" Text="Разбор данных..." FontSize="16" TextAlignment="Center" Foreground="BlueViolet"
+            <TextBlock Width="175" Text="Работа с данными..." FontSize="16" TextAlignment="Center" Foreground="BlueViolet"
                        Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center"
                        Visibility="{Binding IsParsing, Converter={StaticResource BoolToVisibility}}" />
             <TextBlock Text="{Binding FoundCombat}" FontSize="16" TextAlignment="Center" TextWrapping="Wrap"
