--- a/src/CombatAnalysis.App/Views/DetailsSpecificalCombatView.xaml
+++ b/src/CombatAnalysis.App/Views/DetailsSpecificalCombatView.xaml
@@ -1,5 +1,5 @@
 ﻿<views:MvxWpfView
-    x:Class="CombatAnalysis.App.Views.TargetCombatDetailsView"
+    x:Class="CombatAnalysis.App.Views.DetailsSpecificalCombatView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
