--- a/src/CombatAnalysis.App/Views/BasicTemplateView.xaml
+++ b/src/CombatAnalysis.App/Views/BasicTemplateView.xaml
@@ -50,17 +50,10 @@
         <Border Grid.Column="1" Grid.RowSpan="2" CornerRadius="0 20 20 0"
                 Background="#6f50ff" Panel.ZIndex="1" Margin="-25 0 0 0">
             <Grid>
-                <!--<ComboBox VerticalAlignment="Top" Margin="34 25">
-                    <ComboBoxItem Content="Oleg"/>
-                    <ComboBoxItem Content="Dima"/>
-                    <ComboBoxItem Content="Kiril" IsSelected="True"/>
-                    <ComboBoxItem Content="Lera"/>
-                </ComboBox>-->
-
                 <StackPanel Margin="25 160 0 0">
                     <uc:MenuButton Title="Загрузка" Icon="HomeOutline" IsEnabled="{Binding Step, Converter={StaticResource IntToXAMLBoolExpress}, ConverterParameter='>,0'}" 
                                    IsActive="{Binding Step, Converter={StaticResource IntToXAMLBool}, ConverterParameter=0}" OnClick="{Binding UploadCombatsCommand}"/>
-                    <uc:MenuButton Title="Все бои" Icon="ChartTimelineVariantShimmer" IsEnabled="{Binding Step, Converter={StaticResource IntToXAMLBoolExpress}, ConverterParameter='>,1'}"
+                    <uc:MenuButton Title="Все бои" Icon="ChartTimelineVariantShimmer" IsEnabled="{Binding AllowStep, Converter={StaticResource IntToXAMLBoolExpress}, ConverterParameter='>,0'}"
                                    IsActive="{Binding Step, Converter={StaticResource IntToXAMLBool}, ConverterParameter=1}" OnClick="{Binding CombatsCommand}"/>
                     <uc:MenuButton Title="Бой" Icon="Details" IsEnabled="{Binding Step, Converter={StaticResource IntToXAMLBoolExpress}, ConverterParameter='>,2'}"
                                    IsActive="{Binding Step, Converter={StaticResource IntToXAMLBool}, ConverterParameter=2}" OnClick="{Binding CombatCommand}"/>
@@ -82,14 +75,6 @@
         </Border>
 
         <Grid Grid.Column="2" Grid.ColumnSpan="2" Margin="40 30">
-            <!--<Grid Width="500" HorizontalAlignment="Left">
-                <ComboBox HorizontalAlignment="Left" Margin="3 0 0 0" Panel.ZIndex="2">
-                    <ComboBoxItem Content="All category" IsSelected="True"/>
-                    <ComboBoxItem Content="Cars"/>
-                    <ComboBoxItem Content="Books"/>
-                    <ComboBoxItem Content="Homes"/>
-                </ComboBox>
-            </Grid>-->
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                 <Button Style="{StaticResource textBoxButton}">
                     <Icon:PackIconMaterial Kind="BellOutline" Foreground="#88878e"/>
