--- a/src/CombatAnalysis.App/Views/User/LoginView.xaml
+++ b/src/CombatAnalysis.App/Views/User/LoginView.xaml
@@ -49,11 +49,11 @@
 
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="1">
                 <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc Email}" FontSize="18" Margin="0 20"/>
-                <TextBox Style="{StaticResource messageTextBox}" VerticalContentAlignment="Center" Height="35" Padding="5" Width="300" FontSize="16" Text="{Binding Email}" />
+                <TextBox Style="{StaticResource messageTextBox}" VerticalContentAlignment="Center" Height="30" Padding="3" Width="300" FontSize="14" Text="{Binding Email}" />
             </StackPanel>
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="2">
                 <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc Password}" FontSize="18" Margin="0 20"/>
-                <PasswordBox Name="password" Style="{StaticResource passwordTextBox}" VerticalContentAlignment="Center" Height="35" Width="300" FontSize="16"
+                <PasswordBox Name="password" Style="{StaticResource passwordTextBox}" VerticalContentAlignment="Center" Height="30" Padding="3" Width="300" FontSize="14"
                              PasswordChanged="PasswordBox_PasswordChanged"/>
                 <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc IncorrectData}"
                            FontSize="12" Foreground="Brown" Margin="0 10" Visibility="{Binding AuthIsFailed, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}"/>
